--- a/support.html
+++ b/support.html
@@ -8,7 +8,7 @@
     <!-- Favicon -->
     <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
 
-    <!-- Open Graph Meta (for Facebook, WhatsApp sharing) -->
+    <!-- Open Graph Meta -->
     <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
     <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
     <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
@@ -22,6 +22,7 @@
     <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
 
     <style>
+        /* Your styles exactly as you sent earlier */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
@@ -31,7 +32,6 @@
             text-align: center;
             animation: backgroundAnimation 10s infinite;
         }
-
         header {
             background-color: #333;
             color: white;
@@ -39,7 +39,6 @@
             text-align: center;
             animation: fadeIn 2s;
         }
-
         .container {
             width: 80%;
             margin: 20px auto;
@@ -49,12 +48,10 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
             animation: slideIn 2s ease-out;
         }
-
         .message {
             margin-bottom: 20px;
             line-height: 1.6;
         }
-
         button {
             background-color: #4CAF50;
             color: white;
@@ -68,13 +65,11 @@
             overflow: hidden;
             transition: all 0.4s ease;
         }
-
         button:hover {
             background-color: #45a049;
             box-shadow: 0 0 15px rgba(0, 255, 0, 0.7);
             transform: scale(1.1);
         }
-
         button:before {
             content: "";
             position: absolute;
@@ -88,76 +83,45 @@
             transform: translate(-50%, -50%);
             animation: buttonGlow 2s infinite;
         }
-
         @keyframes buttonGlow {
-            0% {
-                box-shadow: 0 0 8px rgba(0, 255, 0, 0.7), 0 0 20px rgba(0, 255, 0, 0.7);
-            }
-            50% {
-                box-shadow: 0 0 12px rgba(0, 255, 0, 0.8), 0 0 30px rgba(0, 255, 0, 0.8);
-            }
-            100% {
-                box-shadow: 0 0 8px rgba(0, 255, 0, 0.7), 0 0 20px rgba(0, 255, 0, 0.7);
-            }
+            0% { box-shadow: 0 0 8px rgba(0, 255, 0, 0.7), 0 0 20px rgba(0, 255, 0, 0.7); }
+            50% { box-shadow: 0 0 12px rgba(0, 255, 0, 0.8), 0 0 30px rgba(0, 255, 0, 0.8); }
+            100% { box-shadow: 0 0 8px rgba(0, 255, 0, 0.7), 0 0 20px rgba(0, 255, 0, 0.7); }
         }
-
         @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
+            0% { opacity: 0; }
+            100% { opacity: 1; }
         }
-
         @keyframes slideIn {
-            0% {
-                transform: translateX(100%);
-            }
-            100% {
-                transform: translateX(0);
-            }
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(0); }
         }
-
-        /* Neon background animation */
         @keyframes backgroundAnimation {
-            0% {
-                background-color: #000;
-            }
-            50% {
-                background-color: #1a1a1a;
-            }
-            100% {
-                background-color: #000;
-            }
+            0% { background-color: #000; }
+            50% { background-color: #1a1a1a; }
+            100% { background-color: #000; }
         }
-
         .ads-section {
             margin-top: 20px;
             text-align: center;
             animation: fadeIn 2s;
         }
-
         .ads-section iframe {
             width: 100%;
             height: 250px;
             border: none;
             margin: 10px 0;
         }
-
         .footer {
             text-align: center;
             margin-top: 40px;
             font-size: 14px;
             color: #777;
         }
-
         .footer a {
             color: #333;
             text-decoration: none;
         }
-
-        /* Ad Banner */
         .ad-banner {
             background-color: #333;
             color: white;
@@ -170,52 +134,82 @@
         }
     </style>
 </head>
+
 <body>
 
-    <header>
-        <h1>Support Us - Doosh Hub</h1>
-    </header>
+<header>
+    <h1>Support Us - Doosh Hub</h1>
+</header>
 
-    <div class="container">
-        <div class="message">
-            <h2>Support Me – Your Help Means Everything</h2>
-            <p>Hello dear visitor,</p>
-            <p>First of all, thank you so much for considering supporting me. Your time and attention are incredibly valuable, and I'm truly grateful for your willingness to help. This website, and the work I create, wouldn't be possible without the support of kind people like you.</p>
-            <p>To support me, I’ve partnered with ad networks that help fund the development and maintenance of this site. It's simple: by engaging with ads (like clicking a banner, popunder, or social bar), you help keep the website running and contribute to its growth. However, I want to make sure you have a safe and smooth experience, and I kindly ask that you follow a few important guidelines while interacting with the ads.</p>
+<div class="container">
+    <h2>Support Me – Your Help Means Everything</h2>  
+        <p>Hello dear visitor,</p>  
+        <p>First of all, thank you so much for considering supporting me. Your time and attention are incredibly valuable, and I'm truly grateful for your willingness to help. This website, and the work I create, wouldn't be possible without the support of kind people like you.</p>  
+        <p>To support me, I’ve partnered with ad networks that help fund the development and maintenance of this site. It's simple: by engaging with ads (like clicking a banner, popunder, or social bar), you help keep the website running and contribute to its growth. However, I want to make sure you have a safe and smooth experience, and I kindly ask that you follow a few important guidelines while interacting with the ads.</p>  <h3>Important: Please Read Carefully</h3>  
+    <ul>  
+        <li>Do not download anything: I do not promote or offer any downloads on this page. Please avoid downloading any files or software from external links, as they may not always be safe.</li>  
+        <li>Click responsibly: Please ensure that you only click on ads that are part of the supported content on the page. Click on ads only when you feel comfortable, and avoid excessive clicking to ensure the process remains fair and legitimate.</li>  
+        <li>Avoid spammy or suspicious links: If something feels odd or out of place, kindly avoid clicking. I work hard to keep everything safe and secure, but if you're unsure, trust your instincts.</li>  
+    </ul>  
 
-            <h3>Important: Please Read Carefully</h3>
-            <ul>
-                <li>Do not download anything: I do not promote or offer any downloads on this page. Please avoid downloading any files or software from external links, as they may not always be safe.</li>
-                <li>Click responsibly: Please ensure that you only click on ads that are part of the supported content on the page. Click on ads only when you feel comfortable, and avoid excessive clicking to ensure the process remains fair and legitimate.</li>
-                <li>Avoid spammy or suspicious links: If something feels odd or out of place, kindly avoid clicking. I work hard to keep everything safe and secure, but if you're unsure, trust your instincts.</li>
-            </ul>
+    <h3>A Few Simple Steps to Support:</h3>  
+    <ol>  
+        <li>Wait a moment: After clicking an ad, please allow a few seconds (around 5 seconds) before returning to the page. This ensures that the ad is properly credited, and it’s much appreciated.</li>  
+        <li>Multiple clicks are optional: You’re welcome to click on the ads, but please keep the interaction natural. I kindly ask that you do not feel pressured to click excessively. Just engaging in a few honest clicks is incredibly helpful!</li>  
+    </ol>  
 
-            <h3>A Few Simple Steps to Support:</h3>
-            <ol>
-                <li>Wait a moment: After clicking an ad, please allow a few seconds (around 5 seconds) before returning to the page. This ensures that the ad is properly credited, and it’s much appreciated.</li>
-                <li>Multiple clicks are optional: You’re welcome to click on the ads, but please keep the interaction natural. I kindly ask that you do not feel pressured to click excessively. Just engaging in a few honest clicks is incredibly helpful!</li>
-            </ol>
+    <p>Once again, thank you so much for being here and helping me in this way. Your support, in whatever form, is truly appreciated.</p>  
+    <p>Please take care, stay safe, and feel free to explore the site further. If you have any questions or concerns, don’t hesitate to reach out!</p>  
+    <p>With gratitude,</p>  
+    <p><strong>Doosh Hub</strong></p>  
+</div>  
 
-            <p>Once again, thank you so much for being here and helping me in this way. Your support, in whatever form, is truly appreciated.</p>
-            <p>Please take care, stay safe, and feel free to explore the site further. If you have any questions or concerns, don’t hesitate to reach out!</p>
-            <p>With gratitude,</p>
-            <p><strong>Doosh Hub</strong></p>
-        </div>
+    <div class="ads-section">
+        <h3>Support by Clicking on the Popunder Ads Below</h3>
+        <div id="popunderMessage"></div>
 
-        <!-- Popunder Ads with Dynamic Messages -->
-        <div class="ads-section">
-            <h3>Support by Clicking on the Popunder Ads Below</h3>
-            <div id="popunderMessage"></div>
+        <!-- Popunder Ad 1 -->
+        <script type='text/javascript' src='//pl26487390.profitableratecpm.com/4b/cd/23/4bcd23553cd7968d87499a86650ba732.js'></script>
+        <button id="popunder1" onclick="showPopunderMessage(1)">Click to Support Popunder 1</button>
+        <button id="popunder2" onclick="showPopunderMessage(2)">Click to Support Popunder 2</button>
+        <button id="popunder3" onclick="showPopunderMessage(3)">Click to Support Popunder 3</button>
+    </div>
 
-            <!-- Popunder Ad 1 -->
-            <script type='text/javascript' src='//pl26487390.profitableratecpm.com/4b/cd/23/4bcd23553cd7968d87499a86650ba732.js'></script>
-            <button id="popunder1" onclick="showPopunderMessage(1)">Click to Support Popunder 1</button>
+    <div>
+        <button onclick="window.location.href='index.html'">Go to Main Page</button>
+    </div>
+</div>
 
-            <!-- More Popunder Buttons (as before) -->
-            <button id="popunder2" onclick="showPopunderMessage(2)">Click to Support Popunder 2</button>
-            <button id="popunder3" onclick="showPopunderMessage(3)">Click to Support Popunder 3</button>
-        </div>
+<!-- Banner Ad script -->
+<script type="text/javascript">
+    atOptions = {
+        'key' : '38c97041ba09133421880a5339a162a8',
+        'format' : 'iframe',
+        'height' : 250,
+        'width' : 300,
+        'params' : {}
+    };
+    document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></scr' + 'ipt>');
+</script>
 
-        <!-- Navigation Buttons Section -->
-        <div>
-            <button onclick="window.location.href='index.html'">Go to Main Page</button>
+<div class="footer">
+    <p>Copyright &copy; 2025 Doosh Hub. All rights reserved.</p>
+</div>
+
+<div class="ad-banner">
+    Enjoying Doosh Hub? Support by clicking ads!
+</div>
+
+<script>
+    function showPopunderMessage(num) {
+        const messages = [
+            "Thanks for supporting Popunder 1!",
+            "You rock! Thanks for supporting Popunder 2!",
+            "You're amazing! Thanks for supporting Popunder 3!"
+        ];
+        document.getElementById('popunderMessage').innerText = messages[num - 1];
+    }
+</script>
+
+</body>
+</html>
