--- a/index.2.html
+++ b/index.2.html
@@ -260,7 +260,7 @@
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
-      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
+      <iframe src="https://profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
     <div class="ad-slot" id="ad2" style="display:none;">
       <script type="text/javascript">
