--- a/support.html
+++ b/support.html
@@ -1,143 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support Us - Doosh Hub</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Support Us - Doosh Hub (v2 Responsive)</title>
+  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      animation: backgroundAnimation 10s infinite;
+    }
+    header {
+      background-color: #222;
+      padding: 10px 0;
+      font-size: 24px;
+    }
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: 20px auto;
+      background: #111;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    }
+    h2, h3 {
+      color: #0f0;
+    }
+    button {
+      background: #0f0;
+      color: #000;
+      border: none;
+      padding: 10px 20px;
+      margin: 10px 5px;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    button:hover {
+      background: #0c0;
+      transform: scale(1.05);
+    }
+    .ads-section {
+      margin-top: 30px;
+    }
+    .floating-ad {
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      width: 300px;
+      height: 250px;
+      background: #222;
+      border: 2px solid #0f0;
+      border-radius: 10px;
+      overflow: hidden;
+      z-index: 9999;
+    }
+    .floating-ad iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    #closeAd {
+      position: absolute;
+      top: 5px;
+      right: 8px;
+      background: red;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 25px;
+      height: 25px;
+      font-size: 16px;
+      line-height: 23px;
+      cursor: pointer;
+    }
+    .banners {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 20px;
+    }
+    .banner-item {
+      flex: 1 1 30%;
+      background: #222;
+      padding: 10px;
+      border-radius: 10px;
+    }
+    .ad-banner {
+      background-color: #333;
+      color: white;
+      padding: 15px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+      z-index: 999;
+    }
+    .footer {
+      margin-top: 50px;
+      padding: 20px;
+      font-size: 14px;
+      color: #777;
+    }
+    a { color: #0f0; text-decoration: none; }
 
-    <!-- Open Graph Meta -->
-    <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
-    <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
-    <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
-    <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
-    <meta property="og:type" content="website" />
+    @keyframes backgroundAnimation {
+      0% { background-color: #000; }
+      50% { background-color: #1a1a1a; }
+      100% { background-color: #000; }
+    }
 
-    <!-- Twitter Card Meta -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
-    <meta name="twitter:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
-    <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
-
-    <style>
-        /* Basic Styles */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            animation: backgroundAnimation 10s infinite;
-        }
-        header {
-            background-color: #222;
-            padding: 10px 0;
-            font-size: 24px;
-        }
-        .container {
-            width: 90%;
-            max-width: 800px;
-            margin: 20px auto;
-            background: #111;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.5);
-        }
-        h2, h3 {
-            color: #0f0;
-        }
-        ul, ol {
-            text-align: left;
-            margin: 10px auto;
-            padding: 0 20px;
-        }
-        button {
-            background: #0f0;
-            color: #000;
-            border: none;
-            padding: 10px 20px;
-            margin: 10px 5px;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-        button:hover {
-            background: #0c0;
-            transform: scale(1.05);
-        }
-        .ads-section {
-            margin-top: 30px;
-        }
-        #floatingAd {
-            position: fixed;
-            bottom: 80px;
-            right: 20px;
-            width: 300px;
-            height: 250px;
-            background: #222;
-            border: 2px solid #0f0;
-            border-radius: 10px;
-            overflow: hidden;
-            z-index: 9999;
-        }
-        #floatingAd iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-        #closeAd {
-            position: absolute;
-            top: 5px;
-            right: 8px;
-            background: red;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            width: 25px;
-            height: 25px;
-            font-size: 16px;
-            line-height: 23px;
-            cursor: pointer;
-        }
-        .ad-banner {
-            background-color: #333;
-            color: white;
-            padding: 15px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
-            z-index: 999;
-        }
-        .footer {
-            margin-top: 50px;
-            padding: 20px;
-            font-size: 14px;
-            color: #777;
-        }
-        a { color: #0f0; text-decoration: none; }
-
-        /* Background Animation */
-        @keyframes backgroundAnimation {
-            0% { background-color: #000; }
-            50% { background-color: #1a1a1a; }
-            100% { background-color: #000; }
-        }
-    </style>
+    /* Mobile Responsive */
+    @media (max-width: 768px) {
+      .banners {
+        flex-direction: column;
+        align-items: center;
+      }
+      .banner-item {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
 <header>
-    <h1>Support Us - Doosh Hub</h1>
+  <h1>Support Us - Doosh Hub</h1>
 </header>
 
 <div class="container">
-   <h2>Support Me – Your Help Means Everything</h2>  
+    <h2>Support Me – Your Help Means Everything</h2>  
         <p>Hello dear visitor,</p>  
         <p>First of all, thank you so much for considering supporting me. Your time and attention are incredibly valuable, and I'm truly grateful for your willingness to help. This website, and the work I create, wouldn't be possible without the support of kind people like you.</p>  
         <p>To support me, I’ve partnered with ad networks that help fund the development and maintenance of this site. It's simple: by engaging with ads (like clicking a banner, popunder, or social bar), you help keep the website running and contribute to its growth. However, I want to make sure you have a safe and smooth experience, and I kindly ask that you follow a few important guidelines while interacting with the ads.</p>  <h3>Important: Please Read Carefully</h3>  
@@ -156,76 +158,123 @@
     <p>Once again, thank you so much for being here and helping me in this way. Your support, in whatever form, is truly appreciated.</p>  
     <p>Please take care, stay safe, and feel free to explore the site further. If you have any questions or concerns, don’t hesitate to reach out!</p>  
     <p>With gratitude,</p>  
-    <p><strong>– Doosh Hub</strong></p>
+    <p><strong>Doosh Hub</strong></p>  
+</div>  
 
     <div class="ads-section">
-        <h3>Support by Clicking Popunder Ads</h3>
-        <div id="popunderMessage" style="margin-bottom: 10px;"></div>
+        <h3>Support by Clicking on the Popunder Ads Below</h3>
+        <div id="popunderMessage"></div>
 
-        <!-- Popunder Ad Scripts -->
-        <button onclick="openPopunder1()">Click to Support Popunder 1</button>
-        <button onclick="openPopunder2()">Click to Support Popunder 2</button>
-        <button onclick="openPopunder3()">Click to Support Popunder 3</button>
-    </div>
+  <div class="ads-section">
+    <h3>Popunder Ads</h3>
+    <div id="popunderMessage" style="margin-bottom: 10px;"></div>
+    <button onclick="openPopunder(0)">Popunder 1</button>
+    <button onclick="openPopunder(1)">Popunder 2</button>
+    <button onclick="openPopunder(2)">Popunder 3</button>
+    <button onclick="openPopunder(3)">Popunder 4</button>
+    <button onclick="openPopunder(4)">Popunder 5</button>
 
-    <div style="margin-top: 20px;">
-        <button onclick="window.location.href='index.html'">Go to Main Page</button>
+    <div style="margin-top:20px;">
+      <button onclick="openSocialBar()">Open Social Bar</button>
     </div>
+  </div>
+
+  <!-- Banners Side-by-Side on Desktop -->
+  <div class="banners">
+    <div class="banner-item">
+      <!-- Banner 1 -->
+      <div id="banner1"></div>
+    </div>
+    <div class="banner-item">
+      <!-- Banner 2 -->
+      <div id="banner2"></div>
+    </div>
+    <div class="banner-item">
+      <!-- Banner 3 -->
+      <div id="banner3"></div>
+    </div>
+  </div>
+
+  <div style="margin-top: 20px;">
+    <button onclick="window.location.href='index.html'">Go to Main Page</button>
+  </div>
 </div>
 
-<!-- Floating Ad Box -->
-<div id="floatingAd">
-    <button id="closeAd" onclick="document.getElementById('floatingAd').style.display='none'">&times;</button>
-    <iframe id="adFrame" src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1"></iframe>
-</div>
-
-<!-- Banner Ad Fixed at Bottom -->
-<div class="ad-banner">
-    Enjoying Doosh Hub? Support us by clicking ads!
-    <div style="margin-top: 5px;">
-        <script type="text/javascript">
-            atOptions = {
-                'key' : '38c97041ba09133421880a5339a162a8',
-                'format' : 'iframe',
-                'height' : 60,
-                'width' : 468,
-                'params' : {}
-            };
-            document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></scr' + 'ipt>');
-        </script>
-    </div>
+<!-- Floating Ad -->
+<div id="floatingAd" class="floating-ad">
+  <button id="closeAd" onclick="document.getElementById('floatingAd').style.display='none'">&times;</button>
+  <iframe id="adFrame" src=""></iframe>
 </div>
 
 <!-- Footer -->
 <div class="footer">
-    Copyright &copy; 2025 Doosh Hub. All rights reserved.
+  Copyright &copy; 2025 Doosh Hub. All rights reserved.
 </div>
 
-<!-- JavaScript for Popunder and Ad Rotation -->
+<!-- Scripts -->
 <script>
-    function openPopunder1() {
-        window.open("//pl26487390.profitableratecpm.com/4b/cd/23/4bcd23553cd7968d87499a86650ba732.js", '_blank');
-        document.getElementById('popunderMessage').innerText = "Thanks for supporting Popunder 1!";
-    }
-    function openPopunder2() {
-        window.open("//pl26487390.profitableratecpm.com/4b/cd/23/4bcd23553cd7968d87499a86650ba732.js", '_blank');
-        document.getElementById('popunderMessage').innerText = "Thanks for supporting Popunder 2!";
-    }
-    function openPopunder3() {
-        window.open("//pl26487390.profitableratecpm.com/4b/cd/23/4bcd23553cd7968d87499a86650ba732.js", '_blank');
-        document.getElementById('popunderMessage').innerText = "Thanks for supporting Popunder 3!";
-    }
+  const popunderLinks = [
+    "https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1",
+    "https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1",
+    "https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9",
+    "https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df",
+    "https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe"
+  ];
 
-    // Switch Floating Ads every 10 seconds
-    const adLinks = [
-        "https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1",
-        "https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1"
-    ];
-    let adIndex = 0;
-    setInterval(() => {
-        adIndex = (adIndex + 1) % adLinks.length;
-        document.getElementById('adFrame').src = adLinks[adIndex];
-    }, 10000);
+  function openPopunder(index) {
+    window.open(popunderLinks[index], '_blank');
+    document.getElementById('popunderMessage').innerText = `Thanks for supporting Popunder ${index + 1}!`;
+  }
+
+  function openSocialBar() {
+    var script = document.createElement('script');
+    script.src = "//pl26487838.profitableratecpm.com/b1/b5/3f/b1b53f67b160e09bda7bf4a781f629b2.js";
+    document.body.appendChild(script);
+  }
+
+  // Floating ad rotation every 10s
+  let adIndex = 0;
+  setInterval(() => {
+    document.getElementById('adFrame').src = popunderLinks[adIndex];
+    adIndex = (adIndex + 1) % popunderLinks.length;
+  }, 10000);
+
+  // Banners auto-refresh every 6 seconds
+  function loadBanners() {
+    document.getElementById('banner1').innerHTML = `
+      <script type="text/javascript">
+        atOptions = {
+          'key' : '38c97041ba09133421880a5339a162a8',
+          'format' : 'iframe',
+          'height' : 60,
+          'width' : 468,
+          'params' : {}
+        };
+      </script>
+      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
+    `;
+
+    document.getElementById('banner2').innerHTML = `
+      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
+    `;
+
+    document.getElementById('banner3').innerHTML = `
+      <script type="text/javascript">
+        atOptions = {
+          'key' : 'dc2b98e1ad9fc907acb18e73b04f7c45',
+          'format' : 'iframe',
+          'height' : 50,
+          'width' : 320,
+          'params' : {}
+        };
+      </script>
+      <script src="//www.highperformanceformat.com/dc2b98e1ad9fc907acb18e73b04f7c45/invoke.js"></script>
+    `;
+  }
+
+  loadBanners();
+  setInterval(loadBanners, 6000);
 </script>
 
 </body>
