--- a/support.html
+++ b/support.html
@@ -88,6 +88,7 @@
       justify-content: center;
       gap: 10px;
       margin-top: 20px;
+      margin-bottom: 40px; /* Added margin for space below banners */
     }
     .banner-item {
       flex: 1 1 30%;
@@ -160,14 +161,33 @@
 
   <!-- Rotating Banners Section -->
   <div class="banners" id="bannerContainer">
-    <div class="banner-item">
-      <iframe src="" id="bannerFrame1" style="width:100%;height:100px;border:none;"></iframe>
+    <div class="banner-item" id="banner1">
+      <script type="text/javascript">
+        atOptions = {
+          'key' : '38c97041ba09133421880a5339a162a8',
+          'format' : 'iframe',
+          'height' : 60,
+          'width' : 468,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
     </div>
-    <div class="banner-item">
-      <iframe src="" id="bannerFrame2" style="width:100%;height:100px;border:none;"></iframe>
+    <div class="banner-item" id="banner2">
+      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
     </div>
-    <div class="banner-item">
-      <iframe src="" id="bannerFrame3" style="width:100%;height:100px;border:none;"></iframe>
+    <div class="banner-item" id="banner3">
+      <script type="text/javascript">
+        atOptions = {
+          'key' : 'dc2b98e1ad9fc907acb18e73b04f7c45',
+          'format' : 'iframe',
+          'height' : 50,
+          'width' : 320,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/dc2b98e1ad9fc907acb18e73b04f7c45/invoke.js"></script>
     </div>
   </div>
 </div>
@@ -192,13 +212,6 @@
     "https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe"
   ];
 
-  const bannerLinks = [
-    "https://www.example.com/ad1.html",  // Replace with real ad landing page URLs
-    "https://www.example.com/ad2.html",
-    "https://www.example.com/ad3.html",
-    "https://www.example.com/ad4.html"
-  ];
-
   function openPopunder(index) {
     window.open(popunderLinks[index], '_blank');
     document.getElementById('popunderMessage').innerText = `Thanks for supporting Popunder ${index + 1}!`;
@@ -210,20 +223,37 @@
     document.body.appendChild(script);
   }
 
-  // Rotate floating ads
-  let adIndex = 0;
-  setInterval(() => {
-    document.getElementById('adFrame').src = popunderLinks[adIndex];
-    adIndex = (adIndex + 1) % popunderLinks.length;
-  }, 10000);
-
-  // Rotate banners
+  // Rotate banners every 6 seconds
   let bannerIndex = 0;
   function rotateBanners() {
-    document.getElementById('bannerFrame1').src = bannerLinks[(bannerIndex) % bannerLinks.length];
-    document.getElementById('bannerFrame2').src = bannerLinks[(bannerIndex + 1) % bannerLinks.length];
-    document.getElementById('bannerFrame3').src = bannerLinks[(bannerIndex + 2) % bannerLinks.length];
-    bannerIndex = (bannerIndex + 1) % bannerLinks.length;
+    document.getElementById('banner1').innerHTML = `
+      <script type="text/javascript">
+        atOptions = {
+          'key' : '38c97041ba09133421880a5339a162a8',
+          'format' : 'iframe',
+          'height' : 60,
+          'width' : 468,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
+    `;
+    document.getElementById('banner2').innerHTML = `
+      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
+    `;
+    document.getElementById('banner3').innerHTML = `
+      <script type="text/javascript">
+        atOptions = {
+          'key' : 'dc2b98e1ad9fc907acb18e73b04f7c45',
+          'format' : 'iframe',
+          'height' : 50,
+          'width' : 320,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/dc2b98e1ad9fc907acb18e73b04f7c45/invoke.js"></script>
+    `;
   }
   rotateBanners();
   setInterval(rotateBanners, 6000); // Every 6 sec
